Fixed titles overlaying language icons on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -483,7 +483,7 @@ body {
     width: 60%;
   }
   .pull-up {
-    top: 40%;
+    top: 45%;
   }
   .languages-smaller {
     margin-top: 20px;
@@ -588,11 +588,11 @@ and (orientation : landscape){
     color: black
   }
   .portfolio-block > .text-white {
-    margin-top: 30px;
+    margin-top: 60px;
   }
   .skills-block > .text-white {
     width: 100%; 
-    margin-top: 0px;
+    margin-top: 30px;
     padding: 30px;
   }
   #card .col-md-6 {
@@ -605,10 +605,10 @@ and (orientation : landscape){
     width: auto;
   }
   .pull-up {
-    top: 40%;
+    top: 35%;
   }
   .contact-btn {
-    top: 150px;
+    top: 120px;
   }
   .mobile-change > *:nth-child(4) {
     width: 65px;
@@ -673,15 +673,20 @@ and (orientation : landscape){
     margin-top: -50%;
   }
   .bg-3 {
-    background-position: 75%;
-  }
-  footer {
-    top: 58% !important;
+    background-position: 65%;
   }
   .go-top {
     width: 40px;
     height: 40px;
     background-size: 24px 14px,auto;
+  }
+  .skills-title {
+    margin-top: 20px;
+  }
+  footer {
+    top: 99vh !important;
+    bottom: 0px !important;
+    left: -20px !important;
   }
 }
 @media screen and ( max-width: 360px ) { /* Smaller, older phones */
